--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h4>Home</h4>
       <h4>Edtech</h4>
       <h4>Programs</h4>
-      <h4>About Us</h4>
+      <h4>About us</h4>
       <h4>Contact Us</h4>
     </div>
     <div id="cursor"></div>
